2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* interp.c: Strip trailing whitespace.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Call SIM_AC_OPTION_WARNINGS.
	* confingure: Regenerate.
	* interp.c (mcore_extract_unsigned_integer): Make static and update
	prototype.  Fix up printf string.
	(mcore_store_unsigned_integer): Make static and update prototype.
	(int_sbrk): Likewise.
	(wbat, wlat, what, rbat, rlat, rhat): Delete INLINE and update
	prototype.
	(SEXTB, SEXTW, IOMEM): Delete.
	(sim_size): Update prototype.  Fix up printf string.
	(init_pointers): Update prototype.
	(set_initial_gprs): Update prototype.  Fix up printf string.
	(log_open, log_close, is_opened, handle_trap1, process_stub, util,
	iu_carry): Update prototype.
	(sim_resume): Update prototype.  Change addr to a word.
	(sim_write, sim_read, sim_store_register, sim_fetch_register,
	sim_trace, sim_stop_reason, sim_stop, sim_info, sim_open,
	sim_close, sim_load, sim_create_inferior, sim_do_command,
	sim_set_callbacks): Update prototype.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CLEAN): Delete.
	(interp.o, mcore-clean): Delete rules.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CFLAGS): Set to
	-DSIM_USE_DEPRECATED_RUN_FRONTEND.
	(SIM_RUN_OBJS): Set to run.o.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete.
	* aclocal.m4, configure: Regenerate.

2015-02-20  Mike Frysinger  <vapier@gentoo.org>

	* interp.c: Delete sysdep.h and netinet/in.h includes.
	Include stdlib.h and string.h.
	* sysdep.h: Delete.

2015-02-19  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_kill): Delete unused func.

2015-02-11  Chen Gang <gang.chen.5i5j@gmail.com>

	* interp.c: Include "unistd.h".

2015-02-02  Chen Gang  <gang.chen.5i5j@gmail.com>
